--- a/style.css
+++ b/style.css
@@ -35,11 +35,9 @@ body {
     font-size: 13px;
     background-color: var(--light-grayish-blue);
     display: grid;
-    justify-content: center;
-    align-items: center;
+
     place-content: center;
     line-height: 1.4;
-    padding: 3rem 1rem;
 }
 
 .wrapper {
@@ -54,6 +52,7 @@ body {
     "   item-3   item-4   item-4   item-5 "
     ;
     gap: 1.212rem;
+    margin-block: 10rem;
 }
 
 .card {
@@ -159,6 +158,7 @@ p {
         "item-3"
         "item-4"
         "item-5";
+        padding: 3rem 1rem;
     }
 }
 
